# loncher

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: main.rs
crates/applications/: Cargo.toml
crates/applications/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: README.md  config.rs  lib.rs  server.rs  transport.rs
crates/runtime/tests/: daemon_ipc.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs
crates/sync-engine/: Cargo.toml
crates/sync-engine/src/: lib.rs
crates/sync-protocol/: Cargo.toml
crates/sync-protocol/src/: lib.rs
crates/ui-contract/: Cargo.toml
crates/ui-contract/src/: lib.rs
crates/ui-iced/: Cargo.toml
crates/ui-iced/src/: lib.rs
docs/: .phase0-ci-marker  .phase0-ci-marker-2  ARCHITECTURE.md  IPC-PROTOCOL.md  PHASE-0-DAEMON.md  PHASE-0-IMPLEMENTATION.md  PHASE-1A-LAUNCHER.md  REVIEW-PHASE-0.md  ROADMAP.md  SYNC.md  phase0-systemd.service.example
packaging/systemd/: loncher.service
