[workspace]
members = [
    "app",
    "crates/domain",
    "crates/runtime",
    "crates/ui-contract",
    "crates/sync-protocol",
    "crates/sync-engine",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Mar2ianen/loncher"

[workspace.dependencies]
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

loncher-domain = { path = "crates/domain" }
loncher-runtime = { path = "crates/runtime" }
loncher-sync-engine = { path = "crates/sync-engine" }
loncher-sync-protocol = { path = "crates/sync-protocol" }
loncher-ui-contract = { path = "crates/ui-contract" }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
