[workspace]
members = [
    "app",
    "crates/domain",
    "crates/applications",
    "crates/search",
    "crates/runtime",
    "crates/ui-contract",
    "crates/ui-iced",
    "crates/sync-protocol",
    "crates/sync-engine",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Mar2ianen/loncher"

[workspace.dependencies]
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
freedesktop-desktop-entry = "0.8.1"
futures-util = { version = "0.3", features = ["sink"] }
iced = { version = "0.14.0", default-features = false, features = ["tiny-skia", "tokio", "wayland"] }
iced_layershell = "0.18.1"
nucleo = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7", features = ["codec", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

loncher-domain = { path = "crates/domain" }
loncher-applications = { path = "crates/applications" }
loncher-search = { path = "crates/search" }
loncher-runtime = { path = "crates/runtime" }
loncher-sync-engine = { path = "crates/sync-engine" }
loncher-sync-protocol = { path = "crates/sync-protocol" }
loncher-ui-contract = { path = "crates/ui-contract" }
loncher-ui-iced = { path = "crates/ui-iced" }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
