[package]
name = "loncher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = []
gui = ["loncher-runtime/gui", "dep:loncher-ui-iced"]
sync = ["dep:loncher-sync-engine"]
sync-client = ["sync"]
sync-server = ["sync"]
desktop = ["gui", "sync-client"]
full = ["desktop"]

[dependencies]
clap.workspace = true
dotenvy.workspace = true
loncher-domain.workspace = true
loncher-runtime.workspace = true
loncher-ui-iced = { workspace = true, optional = true }
loncher-sync-engine = { workspace = true, optional = true }
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
