[package]
name = "loncher-applications"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
freedesktop-desktop-entry.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
