[package]
name = "loncher-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
bytes.workspace = true
futures-util.workspace = true
loncher-domain.workspace = true
loncher-applications.workspace = true
loncher-search.workspace = true
loncher-ui-contract.workspace = true
loncher-ui-iced = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[features]
default = []
gui = ["dep:loncher-ui-iced"]

[dev-dependencies]
tempfile.workspace = true
