[package]
name = "loncher-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
loncher-applications.workspace = true
nucleo.workspace = true
thiserror.workspace = true
tokio.workspace = true
