[package]
name = "loncher-ui-iced"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
iced = { workspace = true, optional = true }
iced_layershell = { workspace = true, optional = true }
loncher-ui-contract.workspace = true
thiserror.workspace = true

[features]
default = ["gui"]
gui = ["dep:iced", "dep:iced_layershell"]
